--- a/styles.css
+++ b/styles.css
@@ -65,8 +65,8 @@
     border-style: solid;
     border-radius: 0.3rem;
     background-color: #fdfdfd;
-    
-    transition: all 0.2s;
+
+    transition: all 0.04s;
 }
 
 #file-input::file-selector-button:hover{
@@ -90,5 +90,42 @@
     border-width: 0.1rem;
     border-radius: 0.3rem;
     background-color: #fdfdfd;
+
+    transition: all 0.04s;
+    
+}
+
+.flip-button:hover{
+    border-radius: 0.50rem;
+    background-color: #efefef;
+}
+
+.flip-button:active{
+    border-radius: 0.8rem;
+    background-color: #e7e7e7;
+}
+
+.download-button{
+    margin: 0.5rem;
+    font-size: 1.3rem;
+    max-height: 40rem;
+    max-width: 40rem;
+    border-style: solid;
+    border-color: black;
+    border-width: 0.1rem;
+    border-radius: 0.3rem;
+    background-color: #fdfdfd;
+
+    transition: all 0.04s;
+}
+
+.download-button:hover{
+    border-radius: 0.50rem;
+    background-color: #efefef;
+}
+
+.download-button:active{
+    border-radius: 0.8rem;
+    background-color: #e7e7e7;
 }
 
