--- a/styles.css
+++ b/styles.css
@@ -7,11 +7,13 @@
 
 .mainbackground{
     background-image: radial-gradient(#529481, #404583);
-    position:absolute;
-    height: 85rem;
+    position: fixed; 
+    top: 0;
+    left: 0;
+    height: 100%;
     width: 100%;
     z-index: -999;
-    padding:0;
+    padding: 0;
     margin: 0;
     filter: brightness(0.7);
 }
@@ -104,28 +106,3 @@
     border-radius: 0.8rem;
     background-color: #e7e7e7;
 }
-
-.download-button{
-    margin: 0.5rem;
-    font-size: 1.3rem;
-    max-height: 40rem;
-    max-width: 40rem;
-    border-style: solid;
-    border-color: black;
-    border-width: 0.1rem;
-    border-radius: 0.3rem;
-    background-color: #fdfdfd;
-
-    transition: all 0.04s;
-}
-
-.download-button:hover{
-    border-radius: 0.50rem;
-    background-color: #efefef;
-}
-
-.download-button:active{
-    border-radius: 0.8rem;
-    background-color: #e7e7e7;
-}
-
